--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>NALs HRM| Log in</title>
+  <title>NALs HRM - Log in</title>
 
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
@@ -56,12 +56,12 @@
     </form>
 
 
-    <!-- /.social-auth-links -->
+
 
   </div>
-  <!-- /.login-box-body -->
+
 </div>
-<!-- /.login-box -->
+
 
 <!-- jQuery 2.2.0 -->
 <script src="resources/plugins/jQuery/jQuery-2.2.0.min.js"></script>
