--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,7 +30,7 @@
   <!-- /.login-logo -->
   <div class="login-box-body">
     <p class="login-box-msg"> </p>
-    <form action="" method="post">
+    <form action="/login" method="post">
       <div class="form-group has-feedback">
         <input type="email" class="form-control" placeholder="Email">
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
